fix spacing

--- a/Web-Fun/CSS/User-Card/style.css
+++ b/Web-Fun/CSS/User-Card/style.css
@@ -5,23 +5,18 @@
 }
 
 .card {
-
     width: 30%;
     height: 200px;
     margin: 30px;
     border: 2px solid #CCCCCC;
     position: relative;
-
-
 }
 
 .content {
     width: 100%;
-
     position: absolute;
-    top: 4%;
-    padding: 20px;
-
+    top: 15%;
+    left: 4%;
 
 }
 
@@ -30,8 +25,6 @@
     border: none;
     width: 100%;
     height: 30%;
-
-
 }
 
 .settings,
